--- a/index.html
+++ b/index.html
@@ -9,9 +9,58 @@
       integrity="sha256-2YQRJMXD7pIAPHiXr0s+vlRWA7GYJEK0ARns7k2sbHY="
       crossorigin="anonymous"
     />
+
+    <style>
+      .success,
+      .error {
+        color: white;
+        padding: 5px;
+        margin: 5px 0 15px 0;
+      }
+
+      .success {
+        background: green;
+      }
+
+      .error {
+        background: red;
+      }
+    </style>
+
     <title>Book List</title>
   </head>
   <body>
+    <div class="container">
+      <h1>Add Book</h1>
+      <form id="book-form">
+        <div>
+          <label for="title">title</label>
+          <input type="text" id="title" class="u-full-width" />
+        </div>
+        <div>
+          <label for="author">author</label>
+          <input type="text" id="author" class="u-full-width" />
+        </div>
+        <div>
+          <label for="isbn">ISBN#</label>
+          <input type="text" id="isbn" class="u-full-width" />
+        </div>
+        <div>
+          <input type="submit" value="Submit" class="u-full-width" />
+        </div>
+      </form>
+      <table class="u-full-width">
+        <thead>
+          <tr>
+            <th>Title</th>
+            <th>Authod</th>
+            <th>ISBN</th>
+            <th></th>
+          </tr>
+        </thead>
+        <tbody id="book-list"></tbody>
+      </table>
+    </div>
     <script src="js/es5/app.js"></script>
   </body>
 </html>
