--- a/index.html
+++ b/index.html
@@ -10,6 +10,12 @@
       crossorigin="anonymous"
     />
 
+    <script
+      src="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.13.0/js/all.min.js"
+      integrity="sha256-KzZiKy0DWYsnwMF+X1DvQngQ2/FxF7MF3Ff72XcpuPs="
+      crossorigin="anonymous"
+    ></script>
+
     <link rel="stylesheet" href="stylesheet/styleshee.css" />
 
     <title>Book List</title>
@@ -19,14 +25,18 @@
       <div class="row">
         <div class="col">
           <div class="mt-5 p-4 card">
-            <h1 class="mx-auto">My FavBooks</h1>
-            <form id="book-form" class="mb-4">
+            <h1 class="mx-auto">
+              My FavBooks <i class="fas fa-book-open"></i>
+            </h1>
+            <hr />
+            <form id="book-form" class="mb-4 mt-4">
               <div class="form-group">
                 <label for="title">Title:</label>
                 <input
                   type="text"
                   id="title"
                   class="u-full-width form-control"
+                  placeholder="The Fall of the House of Usher"
                 />
               </div>
               <div class="form-group">
@@ -35,21 +45,23 @@
                   type="text"
                   id="author"
                   class="u-full-width form-control"
+                  placeholder="Edgar Allan Poe"
                 />
               </div>
               <div class="form-group">
-                <label for="isbn">ISBN#:</label>
+                <label for="isbn">ISBN (13-Digit#):</label>
                 <input
                   type="text"
                   id="isbn"
                   class="mb-4 u-full-width form-control"
+                  placeholder="1892376283764"
                 />
               </div>
-              <div>
+              <div id="myBtn">
                 <input
                   type="submit"
                   value="Submit"
-                  class="u-full-width btn btn-success"
+                  class="u-full-width btn btn-success btn-lg"
                 />
               </div>
             </form>
