changed the color from the icon, and added a font awesome x and changed the color of it

--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
         <div class="col">
           <div class="mt-5 p-4 card">
             <h1 class="mx-auto">
-              My FavBooks <i class="fas fa-book-open"></i>
+              My FavBooks <i class="fas fa-book-open text-success"></i>
             </h1>
             <hr />
             <form id="book-form" class="mb-4 mt-4">
