--- a/index.html
+++ b/index.html
@@ -26,9 +26,11 @@
         <div class="col">
           <div class="mt-5 p-4 card">
             <h1 class="mx-auto">
-              My FavBooks <i class="fas fa-book-open text-success"></i>
+              My <span class="fav">Fav</span>Books
+              <i class="fas fa-book-open text-success"></i>
             </h1>
             <hr />
+            <div id="error" class="alert" role="alert"></div>
             <form id="book-form" class="mb-4 mt-4">
               <div class="form-group">
                 <label for="title">Title:</label>
@@ -36,7 +38,6 @@
                   type="text"
                   id="title"
                   class="u-full-width form-control"
-                  placeholder="The Fall of the House of Usher"
                 />
               </div>
               <div class="form-group">
@@ -45,7 +46,6 @@
                   type="text"
                   id="author"
                   class="u-full-width form-control"
-                  placeholder="Edgar Allan Poe"
                 />
               </div>
               <div class="form-group">
@@ -54,7 +54,6 @@
                   type="text"
                   id="isbn"
                   class="mb-4 u-full-width form-control"
-                  placeholder="1892376283764"
                 />
               </div>
               <div id="myBtn">
