--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
               <thead class="thead-dark">
                 <tr>
                   <th scope="col">Title</th>
-                  <th scope="col">Authod</th>
+                  <th scope="col">Author</th>
                   <th scope="col">ISBN</th>
                   <th></th>
                 </tr>
@@ -94,6 +94,7 @@
       integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl"
       crossorigin="anonymous"
     ></script>
-    <script src="js/es5/app.js"></script>
+    <!-- <script src="js/es5/app.js"></script> -->
+    <script src="js/es6/app.js"></script>
   </body>
 </html>
